--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: flexsurv
 Type: Package
-Title: Flexible parametric survival models
+Title: Flexible parametric survival and multi-state models
 Version: 0.4
 Date: 2014-07-15
 Author: Christopher Jackson <chris.jackson@mrc-bsu.cam.ac.uk>
 Maintainer: Christopher Jackson <chris.jackson@mrc-bsu.cam.ac.uk>
-Description: Flexible parametric models for time-to-event data, including the Royston-Parmar spline model, generalized gamma and generalized F distributions.  Easily extensible to fit user-defined parametric distributions.
+Description: Flexible parametric models for time-to-event data, including the Royston-Parmar spline model, generalized gamma and generalized F distributions.   Any user-defined parametric distribution can be fitted, given at least an R function defining the probability density or hazard.  Produces cumulative incidence functions for multi-state modelling with the "mstate" package.
 License: GPL (>= 2)
 Depends: survival
 Imports: muhaz,mvtnorm
