--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,7 @@
 export(
+basis,
+dbasis,
+dfss,
 dgenf,
 dgenf.orig,
 dgengamma,
@@ -7,6 +10,7 @@ dgompertz,
 dsurvspline,
 flexsurvreg,
 flexsurvspline,
+fss,
 hexp,
 Hexp,
 hgamma,
