--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,10 +5,10 @@ Version: 0.4
 Date: 2014-08-19
 Author: Christopher Jackson <chris.jackson@mrc-bsu.cam.ac.uk>
 Maintainer: Christopher Jackson <chris.jackson@mrc-bsu.cam.ac.uk>
-Description: Flexible parametric models for time-to-event data, including the Royston-Parmar spline model, generalized gamma and generalized F distributions.   Any user-defined parametric distribution can be fitted, given at least an R function defining the probability density or hazard.  Produces cumulative incidence functions for multi-state modelling with the "mstate" package.
+Description: Flexible parametric models for time-to-event data, including the Royston-Parmar spline model, generalized gamma and generalized F distributions.   Any user-defined parametric distribution can be fitted, given at least an R function defining the probability density or hazard.  There are also facilities for multi-state modelling, combining with the "mstate" package.
 License: GPL (>= 2)
 Depends: survival
-Imports: muhaz,mvtnorm
+Imports: muhaz,mvtnorm,deSolve
 Suggests: eha,mstate,numDeriv,testthat,msm,ActuDistns
 LazyLoad: yes
 LazyData: yes
