--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ pgengamma.orig,
 pgompertz,
 psurvspline,
 plot.flexsurvreg,
+pmatrix.fs,    
 qgeneric,
 qgenf,
 qgenf.orig,
@@ -62,6 +63,7 @@ importFrom(survival, Surv)
 importFrom(survival, survfit)
 importFrom(muhaz, muhaz)
 importFrom(mvtnorm, rmvnorm)
+importFrom(deSolve, ode)
 
 S3method(print, flexsurvreg)
 S3method(plot, flexsurvreg)
