new functions for simulation and pmatrix in semi Markov models

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,7 +41,8 @@ pgengamma.orig,
 pgompertz,
 psurvspline,
 plot.flexsurvreg,
-pmatrix.fs,    
+pmatrix.fs,
+pmatrix.simfs,    
 qgeneric,
 qgenf,
 qgenf.orig,
@@ -54,6 +55,7 @@ rgenf.orig,
 rgengamma,
 rgengamma.orig,
 rgompertz,
+sim.fmsm,    
 summary.flexsurvreg,
 unroll.function
 )
