--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,8 @@ importFrom(graphics, plot)
 importFrom(survival, Surv)
 importFrom(survival, survfit)
 importFrom(survival, coxph)
+importFrom(survival, survreg)
+importFrom(survival, survreg.control)
 importFrom(muhaz, muhaz)
 importFrom(mvtnorm, rmvnorm)
 importFrom(deSolve, ode)
