--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,9 @@ unroll.function
 importFrom(graphics, plot)
 importFrom(survival, Surv)
 importFrom(survival, survfit)
+importFrom(survival, coxph)
+importFrom(survival, survreg)
+importFrom(survival, survreg.control)
 importFrom(muhaz, muhaz)
 importFrom(mvtnorm, rmvnorm)
 importFrom(deSolve, ode)
