--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,8 @@ License: GPL (>= 2)
 Depends: survival, R (>= 2.15.0)
 Imports: muhaz,mvtnorm,deSolve
 Suggests: eha,mstate,numDeriv,testthat,msm,ActuDistns,knitr,TH.data,colorspace
+URL: https://github.com/chjackson/flexsurv-dev
+BugReports: https://github.com/chjackson/flexsurv-dev/issues
 VignetteBuilder: knitr
 LazyLoad: yes
 LazyData: yes
