-Updated documentation -Added missing functions to namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,9 @@
 S3method(coef,flexsurvreg)
 S3method(lines,flexsurvreg)
 S3method(logLik,flexsurvreg)
+S3method(mean,genf)
+S3method(mean,weibull)
+S3method(mean,weibullPH)
 S3method(model.frame,flexsurvreg)
 S3method(model.matrix,flexsurvreg)
 S3method(plot,flexsurvreg)
@@ -18,6 +21,7 @@ export(Hgengamma.orig)
 export(Hgompertz)
 export(Hllogis)
 export(Hsurvspline)
+export(Hweibull)
 export(HweibullPH)
 export(basis)
 export(dbasis)
@@ -41,6 +45,7 @@ export(hgengamma.orig)
 export(hgompertz)
 export(hllogis)
 export(hsurvspline)
+export(hweibull)
 export(hweibullPH)
 export(msfit.flexsurvreg)
 export(normboot.flexsurvreg)
@@ -69,12 +74,17 @@ export(rgengamma)
 export(rgengamma.orig)
 export(rgompertz)
 export(rllogis)
+export(rmst.generic)
+export(rmst.genf)
+export(rmst.weibull)
+export(rmst.weibullPH)
 export(rsurvspline)
 export(rweibullPH)
 export(sim.fmsm)
 export(totlos.fs)
 export(totlos.simfs)
 export(unroll.function)
+export(var.weibull)
 import(stats)
 importFrom(Rcpp,sourceCpp)
 importFrom(deSolve,ode)
