-Fixed many missing exports -Renamed mean/rmst functions to avoid getting confused as S3 methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,6 @@
 S3method(coef,flexsurvreg)
 S3method(lines,flexsurvreg)
 S3method(logLik,flexsurvreg)
-S3method(mean,genf)
-S3method(mean,weibull)
-S3method(mean,weibullPH)
 S3method(model.frame,flexsurvreg)
 S3method(model.matrix,flexsurvreg)
 S3method(plot,flexsurvreg)
@@ -14,12 +11,15 @@ S3method(print,summary.flexsurvreg)
 S3method(print,totlos.fs)
 S3method(summary,flexsurvreg)
 S3method(vcov,flexsurvreg)
+export(Hexp)
+export(Hgamma)
 export(Hgenf)
 export(Hgenf.orig)
 export(Hgengamma)
 export(Hgengamma.orig)
 export(Hgompertz)
 export(Hllogis)
+export(Hlnorm)
 export(Hsurvspline)
 export(Hweibull)
 export(HweibullPH)
@@ -38,18 +38,34 @@ export(flexsurv.dists)
 export(flexsurvreg)
 export(flexsurvspline)
 export(fss)
+export(hexp)
+export(hgamma)
 export(hgenf)
 export(hgenf.orig)
 export(hgengamma)
 export(hgengamma.orig)
 export(hgompertz)
 export(hllogis)
+export(hlnorm)
 export(hsurvspline)
 export(hweibull)
 export(hweibullPH)
+export(mean_exp)
+export(mean_gamma)
+export(mean_genf)
+export(mean_genf.orig)
+export(mean_gengamma)
+export(mean_gengamma.orig)
+export(mean_gompertz)
+export(mean_llogis)
+export(mean_lnorm)
+export(mean_survspline)
+export(mean_weibull)
+export(mean_weibullPH)
 export(msfit.flexsurvreg)
 export(normboot.flexsurvreg)
 export(pars.fmsm)
+export(pgenf)
 export(pgenf.orig)
 export(pgengamma)
 export(pgengamma.orig)
@@ -74,17 +90,25 @@ export(rgengamma)
 export(rgengamma.orig)
 export(rgompertz)
 export(rllogis)
-export(rmst.generic)
-export(rmst.genf)
-export(rmst.weibull)
-export(rmst.weibullPH)
+export(rmst_exp)
+export(rmst_gamma)
+export(rmst_generic)
+export(rmst_genf)
+export(rmst_genf.orig)
+export(rmst_gengamma)
+export(rmst_gengamma.orig)
+export(rmst_gompertz)
+export(rmst_llogis)
+export(rmst_lnorm)
+export(rmst_survspline)
+export(rmst_weibull)
+export(rmst_weibullPH)
 export(rsurvspline)
 export(rweibullPH)
 export(sim.fmsm)
 export(totlos.fs)
 export(totlos.simfs)
 export(unroll.function)
-export(var.weibull)
 import(stats)
 importFrom(Rcpp,sourceCpp)
 importFrom(deSolve,ode)
