--- a/NAMESPACE
+++ b/NAMESPACE
@@ -124,4 +124,4 @@ importFrom(survival,coxph)
 importFrom(survival,survfit)
 importFrom(survival,survreg)
 importFrom(survival,survreg.control)
-useDynLib(flexsurv)
+useDynLib(flexsurv, .registration = TRUE)
