--- a/NAMESPACE
+++ b/NAMESPACE
@@ -124,4 +124,6 @@ importFrom(survival,coxph)
 importFrom(survival,survfit)
 importFrom(survival,survreg)
 importFrom(survival,survreg.control)
+importFrom(tibble,tibble)
+importFrom(tidyr,unnest)
 useDynLib(flexsurv, .registration = TRUE)
