--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,9 @@ Imports:
     mvtnorm,
     deSolve,
     quadprog,
-    Rcpp (>= 0.11.5)
+    Rcpp (>= 0.11.5),
+    tidyr,
+    tibble
 Encoding: UTF-8
 Suggests:
     eha,numDeriv,testthat,msm,knitr,TH.data,colorspace
