--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: flexsurv
 Type: Package
 Title: Flexible Parametric Survival and Multi-State Models
 Version: 1.1.1
-Date: 2018-01-26
+Date: 2019-03-18
 Authors@R: c(person("Christopher", "Jackson",
          email="chris.jackson@mrc-bsu.cam.ac.uk",
          role=c("aut", "cre")),
@@ -27,7 +27,9 @@ Imports:
     mvtnorm,
     deSolve,
     quadprog,
-    Rcpp (>= 0.11.5)
+    Rcpp (>= 0.11.5),
+    tidyr,
+    tibble
 Encoding: UTF-8
 Suggests:
     eha,numDeriv,testthat,msm,knitr,TH.data,colorspace
