nobs method for flexsurvreg objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(lines,flexsurvreg)
 S3method(logLik,flexsurvreg)
 S3method(model.frame,flexsurvreg)
 S3method(model.matrix,flexsurvreg)
+S3method(nobs,flexsurvreg)
 S3method(plot,flexsurvreg)
 S3method(print,flexsurvreg)
 S3method(print,summary.flexsurvreg)
