--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,10 @@
 
 language: R
 cache: packages
+install:
+- R -e 'devtools::install_deps(dep = T)'
+script:
+- R CMD build .
+- Rscript -e 'devtools::test()'
 after_success:
   - Rscript -e 'covr::codecov()'
