Added check step

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ install:
 - R -e 'devtools::install_deps(dep = T)'
 script:
 - R CMD build .
+- R CMD check
 - Rscript -e 'devtools::test()'
 after_success:
   - Rscript -e 'covr::codecov()'
