--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@
 language: R
 cache: packages
 install:
+- R -e 'install.packages("devtools")'
 - R -e 'devtools::install_deps(dep = T)'
 script:
 - R CMD build .
