removed covr from description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,8 +38,7 @@ Suggests:
     msm,
     knitr,
     TH.data,
-    colorspace,
-    covr (<= 2.2.2)
+    colorspace
 URL: https://github.com/chjackson/flexsurv-dev
 BugReports: https://github.com/chjackson/flexsurv-dev/issues
 VignetteBuilder: knitr
