New multistate modelling utilities (not fully documented yet)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -107,6 +107,7 @@ export(rmst_weibullPH)
 export(rsurvspline)
 export(rweibullPH)
 export(sim.fmsm)
+export(simfs_bytrans)
 export(totlos.fs)
 export(totlos.simfs)
 export(unroll.function)
