fmsm given help page and exported, some other bugfixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(dweibullPH)
 export(flexsurv.dists)
 export(flexsurvreg)
 export(flexsurvspline)
+export(fmsm)
 export(fss)
 export(hexp)
 export(hgamma)
