Bootstrap CI function cleaned and documented

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(Hsurvspline)
 export(Hweibull)
 export(HweibullPH)
 export(basis)
+export(bootci.fmsm)
 export(dbasis)
 export(dfss)
 export(dgenf)
