Spline distribution functions with one argument per parameter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,14 @@ export(Hgompertz)
 export(Hllogis)
 export(Hlnorm)
 export(Hsurvspline)
+export(Hsurvspline0)
+export(Hsurvspline1)
+export(Hsurvspline2)
+export(Hsurvspline3)
+export(Hsurvspline4)
+export(Hsurvspline5)
+export(Hsurvspline6)
+export(Hsurvspline7)
 export(Hweibull)
 export(HweibullPH)
 export(basis)
@@ -35,6 +43,14 @@ export(dgengamma.orig)
 export(dgompertz)
 export(dllogis)
 export(dsurvspline)
+export(dsurvspline0)
+export(dsurvspline1)
+export(dsurvspline2)
+export(dsurvspline3)
+export(dsurvspline4)
+export(dsurvspline5)
+export(dsurvspline6)
+export(dsurvspline7)
 export(dweibullPH)
 export(flexsurv.dists)
 export(flexsurvreg)
@@ -51,6 +67,14 @@ export(hgompertz)
 export(hllogis)
 export(hlnorm)
 export(hsurvspline)
+export(hsurvspline0)
+export(hsurvspline1)
+export(hsurvspline2)
+export(hsurvspline3)
+export(hsurvspline4)
+export(hsurvspline5)
+export(hsurvspline6)
+export(hsurvspline7)
 export(hweibull)
 export(hweibullPH)
 export(mean_exp)
@@ -63,6 +87,14 @@ export(mean_gompertz)
 export(mean_llogis)
 export(mean_lnorm)
 export(mean_survspline)
+export(mean_survspline0)
+export(mean_survspline1)
+export(mean_survspline2)
+export(mean_survspline3)
+export(mean_survspline4)
+export(mean_survspline5)
+export(mean_survspline6)
+export(mean_survspline7)
 export(mean_weibull)
 export(mean_weibullPH)
 export(msfit.flexsurvreg)
@@ -77,6 +109,14 @@ export(pllogis)
 export(pmatrix.fs)
 export(pmatrix.simfs)
 export(psurvspline)
+export(psurvspline0)
+export(psurvspline1)
+export(psurvspline2)
+export(psurvspline3)
+export(psurvspline4)
+export(psurvspline5)
+export(psurvspline6)
+export(psurvspline7)
 export(pweibullPH)
 export(qgeneric)
 export(qgenf)
@@ -86,6 +126,14 @@ export(qgengamma.orig)
 export(qgompertz)
 export(qllogis)
 export(qsurvspline)
+export(qsurvspline0)
+export(qsurvspline1)
+export(qsurvspline2)
+export(qsurvspline3)
+export(qsurvspline4)
+export(qsurvspline5)
+export(qsurvspline6)
+export(qsurvspline7)
 export(qweibullPH)
 export(rgenf)
 export(rgenf.orig)
@@ -104,9 +152,25 @@ export(rmst_gompertz)
 export(rmst_llogis)
 export(rmst_lnorm)
 export(rmst_survspline)
+export(rmst_survspline0)
+export(rmst_survspline1)
+export(rmst_survspline2)
+export(rmst_survspline3)
+export(rmst_survspline4)
+export(rmst_survspline5)
+export(rmst_survspline6)
+export(rmst_survspline7)
 export(rmst_weibull)
 export(rmst_weibullPH)
 export(rsurvspline)
+export(rsurvspline0)
+export(rsurvspline1)
+export(rsurvspline2)
+export(rsurvspline3)
+export(rsurvspline4)
+export(rsurvspline5)
+export(rsurvspline6)
+export(rsurvspline7)
 export(rweibullPH)
 export(sim.fmsm)
 export(simfs_bytrans)
