New parametric and nonparametric estimators for right-truncated data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,13 @@ S3method(augment,flexsurvreg)
 S3method(coef,flexsurvreg)
 S3method(glance,flexsurvreg)
 S3method(lines,flexsurvreg)
+S3method(lines,survrtrunc)
 S3method(logLik,flexsurvreg)
 S3method(model.frame,flexsurvreg)
 S3method(model.matrix,flexsurvreg)
 S3method(nobs,flexsurvreg)
 S3method(plot,flexsurvreg)
+S3method(plot,survrtrunc)
 S3method(predict,flexsurvreg)
 S3method(print,flexsurvreg)
 S3method(print,summary.flexsurvreg)
@@ -60,6 +62,7 @@ export(dsurvspline7)
 export(dweibullPH)
 export(flexsurv.dists)
 export(flexsurvreg)
+export(flexsurvrtrunc)
 export(flexsurvspline)
 export(fmsm)
 export(fss)
@@ -181,6 +184,7 @@ export(rsurvspline7)
 export(rweibullPH)
 export(sim.fmsm)
 export(simfs_bytrans)
+export(survrtrunc)
 export(tidy)
 export(totlos.fs)
 export(totlos.simfs)
