--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,10 +13,12 @@ S3method(plot,flexsurvreg)
 S3method(plot,survrtrunc)
 S3method(predict,flexsurvreg)
 S3method(print,flexsurvreg)
+S3method(print,flexsurvrtrunc)
 S3method(print,summary.flexsurvreg)
 S3method(print,totlos.fs)
 S3method(residuals,flexsurvreg)
 S3method(summary,flexsurvreg)
+S3method(summary,flexsurvrtrunc)
 S3method(tidy,flexsurvreg)
 S3method(vcov,flexsurvreg)
 export(Hexp)
