--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,12 +6,14 @@ S3method(glance,flexsurvreg)
 S3method(lines,flexsurvreg)
 S3method(lines,survrtrunc)
 S3method(logLik,flexsurvreg)
+S3method(model.frame,flexsurvmix)
 S3method(model.frame,flexsurvreg)
 S3method(model.matrix,flexsurvreg)
 S3method(nobs,flexsurvreg)
 S3method(plot,flexsurvreg)
 S3method(plot,survrtrunc)
 S3method(predict,flexsurvreg)
+S3method(print,flexsurvmix)
 S3method(print,flexsurvreg)
 S3method(print,flexsurvrtrunc)
 S3method(print,summary.flexsurvreg)
@@ -41,6 +43,8 @@ export(Hsurvspline6)
 export(Hsurvspline7)
 export(Hweibull)
 export(HweibullPH)
+export(ajfit)
+export(ajfit_flexsurvmix)
 export(augment)
 export(basis)
 export(bootci.fmsm)
@@ -63,6 +67,7 @@ export(dsurvspline6)
 export(dsurvspline7)
 export(dweibullPH)
 export(flexsurv.dists)
+export(flexsurvmix)
 export(flexsurvreg)
 export(flexsurvrtrunc)
 export(flexsurvspline)
@@ -90,6 +95,7 @@ export(hsurvspline7)
 export(hweibull)
 export(hweibullPH)
 export(mean_exp)
+export(mean_flexsurvmix)
 export(mean_gamma)
 export(mean_genf)
 export(mean_genf.orig)
@@ -111,6 +117,7 @@ export(mean_weibull)
 export(mean_weibullPH)
 export(msfit.flexsurvreg)
 export(normboot.flexsurvreg)
+export(p_flexsurvmix)
 export(pars.fmsm)
 export(pgenf)
 export(pgenf.orig)
@@ -120,6 +127,7 @@ export(pgompertz)
 export(pllogis)
 export(pmatrix.fs)
 export(pmatrix.simfs)
+export(probs_flexsurvmix)
 export(psurvspline)
 export(psurvspline0)
 export(psurvspline1)
@@ -146,6 +154,7 @@ export(qsurvspline4)
 export(qsurvspline5)
 export(qsurvspline6)
 export(qsurvspline7)
+export(quantile_flexsurvmix)
 export(qweibullPH)
 export(rgenf)
 export(rgenf.orig)
@@ -194,11 +203,15 @@ export(unroll.function)
 import(stats)
 importFrom(Rcpp,sourceCpp)
 importFrom(deSolve,ode)
+importFrom(dplyr,full_join)
+importFrom(dplyr,mutate)
+importFrom(dplyr,rename)
 importFrom(generics,augment)
 importFrom(generics,glance)
 importFrom(generics,tidy)
 importFrom(graphics,lines)
 importFrom(graphics,plot)
+importFrom(magrittr,"%>%")
 importFrom(mstate,msfit)
 importFrom(mstate,probtrans)
 importFrom(muhaz,muhaz)
@@ -213,5 +226,9 @@ importFrom(survival,survfit)
 importFrom(survival,survreg)
 importFrom(survival,survreg.control)
 importFrom(tibble,tibble)
+importFrom(tidyr,pivot_longer)
+importFrom(tidyr,pivot_wider)
 importFrom(tidyr,unnest)
+importFrom(tidyselect,all_of)
+importFrom(tidyselect,num_range)
 useDynLib(flexsurv, .registration = TRUE)
