--- a/NAMESPACE
+++ b/NAMESPACE
@@ -165,6 +165,7 @@ export(rgengamma.orig)
 export(rgompertz)
 export(rllogis)
 export(rmst_exp)
+export(rmst_flexsurvmix)
 export(rmst_gamma)
 export(rmst_generic)
 export(rmst_genf)
