Construct multi-state model from flexsurvmix objects, ultimate events functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ export(flexsurvmix)
 export(flexsurvreg)
 export(flexsurvrtrunc)
 export(flexsurvspline)
+export(fmixmsm)
 export(fmsm)
 export(fss)
 export(glance)
@@ -115,6 +116,7 @@ export(mean_survspline4)
 export(mean_survspline5)
 export(mean_survspline6)
 export(mean_survspline7)
+export(mean_tofinal)
 export(mean_weibull)
 export(mean_weibullPH)
 export(msfit.flexsurvreg)
@@ -129,6 +131,7 @@ export(pgompertz)
 export(pllogis)
 export(pmatrix.fs)
 export(pmatrix.simfs)
+export(prob_pathway)
 export(probs_flexsurvmix)
 export(psurvspline)
 export(psurvspline0)
@@ -221,6 +224,7 @@ importFrom(muhaz,muhaz)
 importFrom(mvtnorm,rmvnorm)
 importFrom(purrr,map2_dbl)
 importFrom(quadprog,solve.QP)
+importFrom(rlang,.data)
 importFrom(stats,predict)
 importFrom(stats,residuals)
 importFrom(survival,Surv)
