New functions for output summaries from fmsm objects, and some renaming

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -116,13 +116,14 @@ export(mean_survspline4)
 export(mean_survspline5)
 export(mean_survspline6)
 export(mean_survspline7)
-export(mean_tofinal)
 export(mean_weibull)
 export(mean_weibullPH)
+export(meanfinal_fmixmsm)
 export(msfit.flexsurvreg)
 export(normboot.flexsurvreg)
 export(p_flexsurvmix)
 export(pars.fmsm)
+export(pfinal_fmsm)
 export(pgenf)
 export(pgenf.orig)
 export(pgengamma)
@@ -131,7 +132,7 @@ export(pgompertz)
 export(pllogis)
 export(pmatrix.fs)
 export(pmatrix.simfs)
-export(prob_pathway)
+export(ppath_fmixmsm)
 export(probs_flexsurvmix)
 export(psurvspline)
 export(psurvspline0)
@@ -200,6 +201,7 @@ export(rsurvspline6)
 export(rsurvspline7)
 export(rweibullPH)
 export(sim.fmsm)
+export(simfinal_fmsm)
 export(simfs_bytrans)
 export(survrtrunc)
 export(tidy)
