--- a/NAMESPACE
+++ b/NAMESPACE
@@ -144,6 +144,7 @@ export(psurvspline5)
 export(psurvspline6)
 export(psurvspline7)
 export(pweibullPH)
+export(qfinal_fmixmsm)
 export(qgeneric)
 export(qgenf)
 export(qgenf.orig)
