Added ajfit with doc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(Hweibull)
 export(HweibullPH)
 export(ajfit)
 export(ajfit_flexsurvmix)
+export(ajfit_fmsm)
 export(augment)
 export(basis)
 export(bootci.fmsm)
