updating docs to placate R CMD CHECK

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -211,6 +211,7 @@ export(totlos.fs)
 export(totlos.simfs)
 export(unroll.function)
 import(stats)
+importFrom(Matrix,nearPD)
 importFrom(Rcpp,sourceCpp)
 importFrom(deSolve,ode)
 importFrom(dplyr,full_join)
