--- a/NAMESPACE
+++ b/NAMESPACE
@@ -227,6 +227,7 @@ importFrom(mstate,msfit)
 importFrom(mstate,probtrans)
 importFrom(muhaz,muhaz)
 importFrom(mvtnorm,rmvnorm)
+importFrom(numDeriv,hessian)
 importFrom(purrr,map2_dbl)
 importFrom(quadprog,solve.QP)
 importFrom(rlang,.data)
