--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: flexsurv
 Type: Package
 Title: Flexible Parametric Survival and Multi-State Models
 Version: 2.0
-Date: 2020-09-08
+Date: 2021-02-19
 Authors@R: c(person("Christopher", "Jackson",
          email="chris.jackson@mrc-bsu.cam.ac.uk",
          role=c("aut", "cre")),
@@ -20,7 +20,8 @@ Description: Flexible parametric models for time-to-event data,
     generalized F distributions.  Any user-defined parametric
     distribution can be fitted, given at least an R function defining
     the probability density or hazard. There are also tools for
-    fitting and predicting from fully parametric multi-state models.
+    fitting and predicting from fully parametric multi-state models,
+    based on either cause-specific hazards or mixture models.
 License: GPL (>= 2)
 Depends:
     survival,
