New function pdf_flexsurvmix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -124,6 +124,7 @@ export(msfit.flexsurvreg)
 export(normboot.flexsurvreg)
 export(p_flexsurvmix)
 export(pars.fmsm)
+export(pdf_flexsurvmix)
 export(pfinal_fmsm)
 export(pgenf)
 export(pgenf.orig)
