Forgot to triple colon namespace the fun

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -74,7 +74,7 @@ jobs:
       - name: Install TeX dependencies
         run: |
           install.packages("tinytex")
-          tinytex::install_yihui_pkgs()
+          tinytex:::install_yihui_pkgs()
         shell: Rscript {0}
 
       - name: Check
