Rewrite of summary.flexsurvreg

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ export(ajfit_fmsm)
 export(augment)
 export(basis)
 export(bootci.fmsm)
+export(coxsnell_flexsurvreg)
 export(dbasis)
 export(dfss)
 export(dgenf)
@@ -87,6 +88,7 @@ export(hgengamma.orig)
 export(hgompertz)
 export(hllogis)
 export(hlnorm)
+export(hr_flexsurvreg)
 export(hsurvspline)
 export(hsurvspline0)
 export(hsurvspline1)
