--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ S3method(model.frame,flexsurvreg)
 S3method(model.matrix,flexsurvreg)
 S3method(nobs,flexsurvreg)
 S3method(plot,flexsurvreg)
+S3method(plot,standsurv)
 S3method(plot,survrtrunc)
 S3method(predict,flexsurvreg)
 S3method(print,flexsurvmix)
@@ -24,6 +25,7 @@ S3method(residuals,flexsurvreg)
 S3method(summary,flexsurvreg)
 S3method(summary,flexsurvrtrunc)
 S3method(tidy,flexsurvreg)
+S3method(tidy,standsurv)
 S3method(vcov,flexsurvreg)
 export(Hexp)
 export(Hgamma)
@@ -208,6 +210,7 @@ export(rweibullPH)
 export(sim.fmsm)
 export(simfinal_fmsm)
 export(simfs_bytrans)
+export(standsurv.flexsurvreg)
 export(survrtrunc)
 export(tidy)
 export(totlos.fs)
