--- a/NAMESPACE
+++ b/NAMESPACE
@@ -216,13 +216,20 @@ export(tidy)
 export(totlos.fs)
 export(totlos.simfs)
 export(unroll.function)
+import(ggplot2)
+import(rlang)
 import(stats)
 importFrom(Matrix,nearPD)
 importFrom(Rcpp,sourceCpp)
 importFrom(deSolve,ode)
+importFrom(dplyr,bind_cols)
 importFrom(dplyr,full_join)
+importFrom(dplyr,group_by)
+importFrom(dplyr,inner_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,rename)
+importFrom(dplyr,select)
+importFrom(dplyr,summarise)
 importFrom(generics,augment)
 importFrom(generics,glance)
 importFrom(generics,tidy)
@@ -236,6 +243,7 @@ importFrom(mvtnorm,rmvnorm)
 importFrom(numDeriv,hessian)
 importFrom(purrr,map2_dbl)
 importFrom(quadprog,solve.QP)
+importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(stats,predict)
 importFrom(stats,residuals)
@@ -244,10 +252,12 @@ importFrom(survival,coxph)
 importFrom(survival,survfit)
 importFrom(survival,survreg)
 importFrom(survival,survreg.control)
+importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,unnest)
 importFrom(tidyselect,all_of)
+importFrom(tidyselect,matches)
 importFrom(tidyselect,num_range)
 useDynLib(flexsurv, .registration = TRUE)
