Added delta method functionality with numerical derivatives

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -240,6 +240,7 @@ importFrom(mstate,msfit)
 importFrom(mstate,probtrans)
 importFrom(muhaz,muhaz)
 importFrom(mvtnorm,rmvnorm)
+importFrom(numDeriv,grad)
 importFrom(numDeriv,hessian)
 importFrom(purrr,map2_dbl)
 importFrom(quadprog,solve.QP)
