Marginal expected survival and hazards can now be calculated. In a relative survival model all-cause survival and hazards can be calculated as well as relative survival and excess hazards.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -223,6 +223,7 @@ importFrom(Matrix,nearPD)
 importFrom(Rcpp,sourceCpp)
 importFrom(deSolve,ode)
 importFrom(dplyr,bind_cols)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,full_join)
 importFrom(dplyr,group_by)
 importFrom(dplyr,inner_join)
