--- a/NAMESPACE
+++ b/NAMESPACE
@@ -227,6 +227,7 @@ importFrom(dplyr,bind_rows)
 importFrom(dplyr,full_join)
 importFrom(dplyr,group_by)
 importFrom(dplyr,inner_join)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
