Vignette written for standsurv.flexsurvreg

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,6 +50,10 @@ Imports:
     ggplot2
 Encoding: UTF-8
 Suggests:
+    flexsurvcure,
+    survminer,
+    lubridate,
+    rmarkdown,
     colorspace,
     eha,
     knitr,
