--- a/NAMESPACE
+++ b/NAMESPACE
@@ -229,8 +229,10 @@ importFrom(dplyr,group_by)
 importFrom(dplyr,inner_join)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,n)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
+importFrom(dplyr,slice)
 importFrom(dplyr,summarise)
 importFrom(generics,augment)
 importFrom(generics,glance)
