Changing function name to standsurv

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -210,7 +210,7 @@ export(rweibullPH)
 export(sim.fmsm)
 export(simfinal_fmsm)
 export(simfs_bytrans)
-export(standsurv.flexsurvreg)
+export(standsurv)
 export(survrtrunc)
 export(tidy)
 export(totlos.fs)
