--- a/NAMESPACE
+++ b/NAMESPACE
@@ -210,7 +210,7 @@ export(rweibullPH)
 export(sim.fmsm)
 export(simfinal_fmsm)
 export(simfs_bytrans)
-export(standsurv.flexsurvreg)
+export(standsurv)
 export(survrtrunc)
 export(tidy)
 export(totlos.fs)
@@ -250,6 +250,7 @@ importFrom(purrr,map2_dbl)
 importFrom(quadprog,solve.QP)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
+importFrom(statmod,gauss.quad)
 importFrom(stats,predict)
 importFrom(stats,residuals)
 importFrom(survival,Surv)
