--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ S3method(print,fmsm)
 S3method(print,summary.flexsurvreg)
 S3method(print,totlos.fs)
 S3method(residuals,flexsurvreg)
+S3method(simulate,flexsurvreg)
 S3method(summary,flexsurvreg)
 S3method(summary,flexsurvrtrunc)
 S3method(tidy,flexsurvreg)
