deltamethod for contrasts of quantiles updated. Other minor changes to satisfy check()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -231,6 +231,7 @@ importFrom(dplyr,inner_join)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
+importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
