Add broom to Suggests as it's used in a test

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: flexsurv
 Type: Package
 Title: Flexible Parametric Survival and Multi-State Models
 Version: 2.3
-Date: 2023-??-??
+Date: 2023-05-26
 Authors@R: c(person("Christopher", "Jackson",
          email="chris.jackson@mrc-bsu.cam.ac.uk",
          role=c("aut", "cre")),
@@ -60,7 +60,8 @@ Suggests:
     knitr,
     msm,
     testthat,
-    TH.data
+    TH.data,
+    broom
 URL: https://github.com/chjackson/flexsurv-dev
 BugReports: https://github.com/chjackson/flexsurv-dev/issues
 VignetteBuilder: knitr
