--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -34,7 +34,12 @@ jobs:
       - uses: r-lib/actions/setup-pandoc@v2
 
       - uses: r-lib/actions/setup-tinytex@v2
-      - run: tlmgr --version
+      - run: |
+      	  tlmgr --version
+	  tinytex::parse_install( text = "! LaTeX Error: File ae.sty' not found.")
+	  tinytex::parse_install( text = "! LaTeX Error: File footmisc.sty' not found.")
+	  tinytex::parse_install( text = "! LaTeX Error: File ctable.sty' not found.")
+	  tinytex::parse_install( text = "! LaTeX Error: File grfext.sty' not found.")
 
       - uses: r-lib/actions/setup-r@v2
         with:
