--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -34,8 +34,10 @@ jobs:
       - uses: r-lib/actions/setup-pandoc@v2
 
       - uses: r-lib/actions/setup-tinytex@v2
+      - run: tlmgr --version
+
+      - name: Install additional LaTeX packages
         run: |
-      	  tlmgr --version
 	  tinytex::parse_install( text = "! LaTeX Error: File ae.sty' not found.")
 	  tinytex::parse_install( text = "! LaTeX Error: File footmisc.sty' not found.")
 	  tinytex::parse_install( text = "! LaTeX Error: File ctable.sty' not found.")
