--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -39,10 +39,7 @@ jobs:
 
       - name: Install additional LaTeX packages
         run:
-	  tinytex::parse_install( text = "! LaTeX Error: File ae.sty' not found.")
-	  tinytex::parse_install( text = "! LaTeX Error: File footmisc.sty' not found.")
-	  tinytex::parse_install( text = "! LaTeX Error: File ctable.sty' not found.")
-	  tinytex::parse_install( text = "! LaTeX Error: File grfext.sty' not found.")
+          tinytex::tlmgr_install(pkgs = "grfext")
 
       - uses: r-lib/actions/setup-r@v2
         with:
