--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -40,6 +40,7 @@ jobs:
       - name: Install additional LaTeX packages
         run:
           tinytex::tlmgr_install(pkgs = "grfext")
+        shell: Rscript {0}
 
       - uses: r-lib/actions/setup-r@v2
         with:
