--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -38,7 +38,7 @@ jobs:
       - run: tlmgr --version
 
       - name: Install additional LaTeX packages
-        run:
+        run: |
           remotes::install_deps(dependencies = TRUE)
           remotes::install_cran("rcmdcheck")
           tinytex::tlmgr_install(pkgs = "grfext")
