--- a/vignettes/.gitignore
+++ b/vignettes/.gitignore
@@ -8,3 +8,30 @@ multistate.bbl
 multistate.blg
 *.html
 *.R
+distributions.aux
+distributions.log
+distributions.out
+distributions.pdf
+distributions.tex
+flexsurv-cumhaz-1.pdf
+flexsurv-examples-002.pdf
+flexsurv-examples.aux
+flexsurv-examples.log
+flexsurv-examples.out
+flexsurv-examples.tex
+flexsurv-haz-1.pdf
+flexsurv-splinehaz-1.pdf
+flexsurv-surv-1.pdf
+flexsurv-unnamed-chunk-30-1.pdf
+flexsurv-unnamed-chunk-30-2.pdf
+flexsurv-unnamed-chunk-31-1.pdf
+flexsurv.aux
+flexsurv.log
+flexsurv.out
+flexsurv.pdf
+flexsurv.tex
+multistate.aux
+multistate.log
+multistate.out
+multistate.pdf
+multistate.tex
