--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -18,6 +18,7 @@ vignettes/.+\.bbl
 vignettes/.+\.blg
 vignettes/flexsurv-.+\.pdf
 vignettes/.+.odg
+vignettes/pdf.Rmd
 inst/doc/flexsurv.Rnw
 inst/doc/flexsurv-examples.Rnw
 tests/extra
