--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -46,3 +46,7 @@ jobs:
           needs: check
 
       - uses: r-lib/actions/check-r-package@v2
+        with: 
+          args: 'c("--no-manual","--ignore-vignettes")'
+          build-args: 'c("--no-build-vignettes")'
+          
