--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -48,5 +48,5 @@ jobs:
       - uses: r-lib/actions/check-r-package@v2
         with: 
           args: 'c("--no-manual","--ignore-vignettes")'
-          build-args: 'c("--no-build-vignettes")'
+          build_args: 'c("--no-build-vignettes")'
           
