--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -47,6 +47,7 @@ jobs:
 
       - uses: r-lib/actions/check-r-package@v2
         with: 
+          upload-snapshots: true
           args: 'c("--no-manual","--ignore-vignettes")'
           build_args: 'c("--no-build-vignettes")'
           
