Allow t vector in standsurv to includes times in any order and duplicates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -241,6 +241,7 @@ importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
 importFrom(dplyr,summarise)
+importFrom(dplyr,ungroup)
 importFrom(generics,augment)
 importFrom(generics,glance)
 importFrom(generics,tidy)
