--- a/NAMESPACE
+++ b/NAMESPACE
@@ -230,6 +230,7 @@ importFrom(Rcpp,sourceCpp)
 importFrom(deSolve,ode)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,distinct)
 importFrom(dplyr,full_join)
 importFrom(dplyr,group_by)
 importFrom(dplyr,inner_join)
