Remove global variables NOTE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -275,4 +275,5 @@ importFrom(tidyr,unnest)
 importFrom(tidyselect,all_of)
 importFrom(tidyselect,matches)
 importFrom(tidyselect,num_range)
+importFrom(utils,globalVariables)
 useDynLib(flexsurv, .registration = TRUE)
