Tell rhub to ignore vignettes

--- a/.github/workflows/rhub.yaml
+++ b/.github/workflows/rhub.yaml
@@ -93,3 +93,5 @@ jobs:
         with:
           job-config: ${{ matrix.config.job-config }}
           token: ${{ secrets.RHUB_TOKEN }}
+          args: 'c("--no-manual","--ignore-vignettes")'
+          build_args: 'c("--no-build-vignettes")'
