--- a/.github/workflows/rhub.yaml
+++ b/.github/workflows/rhub.yaml
@@ -60,6 +60,13 @@ jobs:
         with:
           token: ${{ secrets.RHUB_TOKEN }}
           job-config: ${{ matrix.config.job-config }}
+      - uses: r-lib/actions/setup-tinytex@v2
+      - run: tlmgr --version
+      - name: Install additional LaTeX packages
+        run: |
+          tlmgr update --self
+          tlmgr install grfext ae courier
+          tlmgr list --only-installed
       - uses: r-hub/actions/run-check@v1
         with:
           token: ${{ secrets.RHUB_TOKEN }}
@@ -89,6 +96,13 @@ jobs:
         with:
           job-config: ${{ matrix.config.job-config }}
           token: ${{ secrets.RHUB_TOKEN }}
+      - uses: r-lib/actions/setup-tinytex@v2
+      - run: tlmgr --version
+      - name: Install additional LaTeX packages
+        run: |
+          tlmgr update --self
+          tlmgr install grfext ae courier
+          tlmgr list --only-installed
       - uses: r-hub/actions/run-check@v1
         with:
           job-config: ${{ matrix.config.job-config }}
