--- a/.github/workflows/rhub.yaml
+++ b/.github/workflows/rhub.yaml
@@ -69,6 +69,7 @@ jobs:
           tlmgr list --only-installed
       - uses: r-hub/actions/run-check@v1
         with:
+	  build-args: 'c("--compact-vignettes=both")'
           token: ${{ secrets.RHUB_TOKEN }}
           job-config: ${{ matrix.config.job-config }}
 
@@ -105,5 +106,6 @@ jobs:
           tlmgr list --only-installed
       - uses: r-hub/actions/run-check@v1
         with:
+	  build-args: 'c("--compact-vignettes=both")'
           job-config: ${{ matrix.config.job-config }}
           token: ${{ secrets.RHUB_TOKEN }}
